[package]
name = "freighter-client"
version = "0.1.0-rc.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "API client for the Freighter Rust crates Registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[dependencies]
freighter-api-types = { workspace = true, features = ["auth", "index", "ownership", "client"] }

anyhow = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
