[package]
name = "freighter-client"
version = "1.0.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
freighter-api-types = { workspace = true, features = ["auth", "index", "ownership", "client"] }

anyhow = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
