[package]
name = "freighter-client"
version = "1.1.0"
description = "A very basic Cargo registry client, for testing"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
required-features = ["binary"]
name = "freighter-client"

[dependencies]
freighter-api-types = { workspace = true, features = ["auth", "index", "ownership", "client"] }

anyhow = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# bin only
tokio = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = ["std", "env", "derive", "cargo", "help", "wrap_help", "usage"] }
crate_untar = { version = "1.0.0-rc.1", optional = true }
cargo_toml = { version = "0.20.4", optional = true }

[features]
binary = ["dep:tokio", "dep:clap", "dep:crate_untar", "dep:cargo_toml", "reqwest/default-tls"]

[lints]
workspace = true
