[package]
name = "freighter-fs-index"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Kornel Lesiński <kornel@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Filesystem-based index implementation for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[dependencies]
freighter-api-types = { workspace = true, features = ["index", "storage"] }
freighter-storage = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
