[package]
name = "freighter-fs-index"
version = "1.0.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
freighter-api-types = { workspace = true, features = ["index", "storage"] }
freighter-storage = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
