[package]
name = "freighter-pg-index"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
freighter-api-types = { workspace = true, features = ["index", "postgres"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "with-chrono-0_4"] }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
