[package]
name = "freighter-server"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
test_e2e = [
    "dep:deadpool-postgres",
    "dep:freighter-pg-index",
    "dep:freighter-fs-index",
    "dep:reqwest",
    "axum/tokio",
    "axum/http1",
    "dep:tracing-subscriber",
    "freighter-auth/fs-backend",
    "dep:freighter-client",
    "dep:rand",
]

[dependencies]
freighter-api-types = { workspace = true, features = ["server", "index", "auth"] }
freighter-client = { workspace = true, optional = true }
freighter-auth = { workspace = true, features = ["yes-backend"] }
freighter-storage = { workspace = true }
freighter-pg-index = { workspace = true, optional = true }
freighter-fs-index = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "query", "form", "matched-path"] }
axum-extra = { workspace = true }
deadpool-postgres = { workspace = true, optional = true }
metrics = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tokio = { workspace = true }

[dev-dependencies]
freighter-api-types = { workspace = true, features = ["client"] }
async-trait = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
