[package]
name = "freighter-storage"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
freighter-api-types = { workspace = true, features = ["storage"] }
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
aws-credential-types = { workspace = true, features = ["hardcoded-credentials"] }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
