[package]
name = "freighter-storage"
version = "1.0.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
freighter-api-types = { workspace = true, features = ["storage"] }
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
aws-credential-types = { workspace = true, features = ["hardcoded-credentials"] }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
