[package]
name = "freighter"
version = "0.1.1-rc.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[dependencies]
freighter-auth = { workspace = true }
freighter-api-types = { workspace = true, features = ["index"] }
freighter-pg-index = { workspace = true, optional = true }
freighter-fs-index = { workspace = true, optional = true }
freighter-server = { workspace = true }
freighter-storage = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio", "http2"] }
clap = { workspace = true, features = ["std", "derive", "cargo", "help", "wrap_help", "usage"] }
deadpool-postgres = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "smallvec", "fmt", "tracing-log", "ansi"] }
cfg-if = "1.0.0"

[features]
default = ["postgresql-index-backend", "postgresql-auth-backend"]
postgresql-index-backend = ["dep:freighter-pg-index"]
filesystem-index-backend = ["dep:freighter-fs-index"]

postgresql-auth-backend = ["freighter-auth/pg-backend"]
filesystem-auth-backend = ["freighter-auth/fs-backend"]
cloudflare-auth-backend = ["freighter-auth/cf-backend"]

[lints]
workspace = true
