[package]
name = "freighter"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
freighter-auth = { workspace = true }
freighter-api-types = { workspace = true, features = ["index"] }
freighter-pg-index = { workspace = true, optional = true }
freighter-fs-index = { workspace = true, optional = true }
freighter-server = { workspace = true }
freighter-storage = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio", "http2"] }
clap = { workspace = true, features = ["std", "derive", "cargo", "help", "wrap_help", "usage"] }
deadpool-postgres = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "smallvec", "fmt", "tracing-log", "ansi"] }
cfg-if = "1.0.0"

[features]
postgresql-index-backend = ["dep:freighter-pg-index"]
filesystem-index-backend = ["dep:freighter-fs-index"]

filesystem-auth-backend = ["freighter-auth/fs-backend"]
cloudflare-auth-backend = ["freighter-auth/cf-backend"]
yes-auth-backend = ["freighter-auth/yes-backend"]

[lints]
workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
